# ai-debate

./: .gitignore  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  README.md  env.template  pyproject.toml
early-experiments/ai-job-automation/: README.md  claude-affirmative.md  gpt-affirmative.md
scripts/: run.sh  run_debate.py  run_match.py  run_matrix.py  test_models.py
src/ai_debate/: __init__.py
src/ai_debate/debate/: __init__.py  engine.py  formats.py
src/ai_debate/judging/: __init__.py  judge.py  rubric.py  scoring.py
src/ai_debate/matrix/: __init__.py  elo.py  markdown.py  runner.py  scheduler.py  serialization.py  stats.py  types.py
src/ai_debate/models/: __init__.py  anthropic.py  base.py  google.py  openai.py  xai.py
src/ai_debate/storage/: __init__.py
tests/: __init__.py
